--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/avatar.jpeg" alt="Marco Polignano" width="80">
+          <img src="./assets/images/image.jpeg" alt="Marco Polignano" width="80">
         </figure>
 
         <div class="info-content">
