--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations:	1098<br> H-Index: 16<br> i10-index: 23</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations:	1126<br> H-Index: 16<br> i10-index: 24</p><br>
 
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -428,6 +428,11 @@
         <section class="skill">
           <br><br>
           <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>
+          <h4 class="h4">Editorial Board:</h4>
+          <ul style="color:white; list-style: square;">
+            <li style="list-style: square;">ECEB - <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board">https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/</a></li>
+            <li style="list-style: square;"> IJCOL - <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - <a href="https://journals.openedition.org/ijcol/490">https://journals.openedition.org/ijcol/490</a></li>
+          </ul>
           <h4 class="h4">Reviewer Board:</h4>
           <ul style="color:hsl(45, 54%, 58%); list-style: square;">
             <li style="list-style: square;">More than 35 reviews for volumes and international High-Quality Journals including <b>Elsevier, Springer, IEEE, Wiley</b></li>
