--- a/index.html
+++ b/index.html
@@ -430,8 +430,8 @@
           <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>
           <h4 class="h4">Editorial Board:</h4>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;">ECEB - <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">JSIS/</a></li>
-            <li style="list-style: square;"> IJCOL - <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
+            <li style="list-style: square;">ECEB (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
+            <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
           </ul>
           <h4 class="h4">Reviewer Board:</h4>
           <ul style="color:hsl(45, 54%, 58%); list-style: square;">
