--- a/index.html
+++ b/index.html
@@ -441,6 +441,15 @@
 
         <section class="skill">
           <br><br>
+          <h3 class="h3 skills-title">SUPERVISION</h3>
+          <ul>
+            <li style="color:white;list-style: square;"> <b>Scientific Supervisor Research Assistant</b> at the Department of Computer Science, University of Bari Aldo Moro, starting in August 2023 ending in 2024</li>
+            <li style="color:white;list-style: square;"> <b>Co-Supervisor Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
+            <li style="color:white;list-style: square;"> <b>Supervisor</b> Supervisor of more than 30 bachelor's theses and 10 master's theses</li>
+          <ul>
+        </section>
+        <section class="skill">
+          <br><br>
           <h3 class="h3 skills-title">TEACHING</h3>
           <ul>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Natural Language Processing".</span>  3 ECTS credits, doctorate in Computer Science and Mathematics, University of Bari, a.y. 2021/2022</li>
@@ -481,7 +490,7 @@
           </ul><br>
           <h4 class="h4">Workshop Co-Chair:</h4>
           <ul>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ATE_ABSITA 2020</span> Aspect Term Extraction and Aspect-based Sentiment Analysis Task co-located event of the 7th Italian Conference on Computational Linguistics - CLiC-it 2020 </li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ABSITA 2018 - ATE_ABSITA 2020</span> Aspect Term Extraction and Aspect-based Sentiment Analysis Task co-located event of the 7th Italian Conference on Computational Linguistics - CLiC-it 2020 </li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ExUm</span> International Workshop on Transparent Personalization Methods based on Heterogeneous Personal Data at the ACM International Conference On User Modelling, Adaptation And Personalization: ‘19-’20-‘21-‘22-‘23</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">IntRS</span> Workshop on Interfaces and Human Decision Making for Recommender Systems at the ACM International Conference on Recommender Systems: '22-'23</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">NL4AI</span> Workshop on Natural Language for Artificial Intelligence (NL4AI, 6th edition) Co-located at the International Conference of the Italian Association for Artificial intelligence: '22-'23</li>
@@ -491,7 +500,7 @@
           <h4 class="h4">TPC member of some of the most relevant scientific conferences</h4>
             <ul style="color:antiquewhite; list-style: square;">
               <li style="list-style: square;">IUI 2017-2018-2024, International Intelligent User Interface conference - GRIN-GII A </li>
-              <li style="list-style: square;">UMAP 2018/2022/2023, User Modeling, Adaptation and Personalization conference - GRIN-GII </li>
+              <li style="list-style: square;">UMAP 2018/2022/2023, User Modeling, Adaptation and Personalization conference - GRIN-GII B</li>
               <li style="list-style: square;">IJCAI 2020, International Joint Conference on Artificial Intelligence - GRIN-GII A++ </li>
               <li style="list-style: square;">ECAI 2020, European Conference on Artificial Intelligence - GRIN-GII A- </li>
               <li style="list-style: square;">RecSys 2020-2022-2023, Conference on Recommender Systems - GRIN-GII A </li>
