--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
           <br><br>
           <h3 class="h3 skills-title">SUPERVISION</h3>
           <ul>
-            <li style="color:white;list-style: square;"> <b>Scientific Supervisor Research Assistant</b> at the Department of Computer Science, University of Bari Aldo Moro, starting in August 2023 ending in 2024</li>
-            <li style="color:white;list-style: square;"> <b>Co-Supervisor Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
-            <li style="color:white;list-style: square;"> <b>Supervisor</b> Supervisor of more than 30 bachelor's theses and 10 master's theses</li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Scientific Supervisor of one Research Assistant</b> at the Department of Computer Science, University of Bari Aldo Moro, starting in August 2023 ending in 2024</li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Co-Supervisor of one Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Supervisor</b> of more than 30 bachelor's theses and 10 master's theses</li>
           <ul>
         </section>
         <section class="skill">
