--- a/index.html
+++ b/index.html
@@ -529,6 +529,17 @@
 
       </article>
 
+      <section class="skill">
+        <br><br>
+        <h3 class="h3 skills-title">Memberships</h3>
+        <ul style="color:antiquewhite; list-style: square;">
+          <li style="list-style: square;">ACM - Association for Computing Machinery</li>
+          <li style="list-style: square;">IEEE - Institute of Electrical and Electronics Engineers</li>
+          <li style="list-style: square;">AILC - Italian Association of Computational Linguistics </li>
+          <li style="list-style: square;">AixiA - Italian Association for Artificial Intelligence </li>
+        </ul>
+      </section>
+
 
 
 
