--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 
 <head>
   <meta name="google-site-verification" content="LnAGTYhxXSlMDdacNX5FrronkxrUPT3CE5RpgyY5asg" />
+  <meta name="keywords" content="Marco Polignano" />
+  <meta name="keywords" content="Polignano" />
+  <meta name="keywords" content="Marco" />
+  <meta name="keywords" content="UNIBA" />
+  <meta name="keywords" content="DIB" />
+  <meta name="keywords" content="Dr" />
+  <meta name="keywords" content="CV" />
+  <meta name="keywords" content="Portfolio" />
+  <meta name="keywords" content="Expertice" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
