--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations:	1153<br> H-Index: 17<br> i10-index: 25</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations:	1165<br> H-Index: 17<br> i10-index: 25</p><br>
 
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -483,7 +483,8 @@
           <h4 class="h4">Project reviewer</h4>
           <ul>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Austrian Science Fund (FWF)</span></li>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the -	Israel Science Foundation (ISF)</span></li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the -	Israel Science Foundation (ISF)
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the - <a href="https://open-research-europe.ec.europa.eu/">Open Research Europe (F1000)</a></span></li>
           </ul>
           <br><br>
         </section>
