--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@
           <h4 class="h4">Project reviewer</h4>
           <ul>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Austrian Science Fund (FWF)</span></li>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the -	Israel Science Foundation (ISF)
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the - <a href="https://open-research-europe.ec.europa.eu/">Open Research Europe (F1000)</a></span></li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Israel Science Foundation (ISF)
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Expert evaluator for the Open Research Europe (F1000)</span></li>
           </ul>
           <br><br>
         </section>
