--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>
           <h4 class="h4">Editorial Board:</h4>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;">ECEB (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Early Carreer Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
+            <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Early Carreer Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
             <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - Editorial Board <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
             <li style="list-style: square;"> (IA) <b>Intelligenza Artificiale, IO-Press</b> Electronic ISSN 2211-0097 - Guest Editor Special Issue NL4AI 2022  <a href="https://content.iospress.com/articles/intelligenza-artificiale/ia172157" style="color:cyan; display:inline">https://content.iospress.com/articles/intelligenza-artificiale/ia172157</a></li>
           </ul>
