--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1206<br> H-Index: 17<br> i10-index: 25</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1239<br> H-Index: 17<br> i10-index: 27</p><br>
 
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -224,7 +224,7 @@
             I have also contributed to organizing a successful edition of <b>EVALITA 2023, NL4AI 2022/23 and the UMAP 2020/23 ExUm Workshops</b>, emphasizing user modeling, content personalization, and semantic representation. Recently, I also supported the community as a <b style="color:cyan;">co-chair for ACL 2022 and EACL 2024</b> international conferences.
           </p>
           <p>
-            My expertise has been sought after serving as an official reviewer for numerous international journals, further establishing my reputation as a knowledgeable authority in NLP and Recommender Systems. I am currently in the <b>Reviewer Editorial Board</b> of more than <b>30 Computer Science International Journals</b>,
+            My expertise has been sought after serving as an official reviewer for numerous international journals, further establishing my reputation as a knowledgeable authority in NLP and Recommender Systems. I am currently in the <b>Reviewer Editorial Board</b> of more than <b>35 Computer Science International Journals</b>,
             including Information Processing and Management (Elsevier), Expert Systems with Applications (Elsevier), and IEEE Transactions on Knowledge and Data Engineering (IEEE Press).<br>
             Notably, I was awarded the prestigious <b style="color:cyan;">Marie Skłodowska-Curie Research and Innovation Staff Exchange (MSCA-RISE) fellowship</b> in both 2016 and 2018. During these periods, I actively participated in Project No. 691071, titled "Seo-Dwarf: Semantic EO Data Web Alert and Retrieval Framework," further expanding my expertise and contributing to groundbreaking research.
           </p>
@@ -439,7 +439,7 @@
           <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>
           <h4 class="h4">Editorial Board:</h4>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Early Carreer Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
+            <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
             <li style="list-style: square;"> (IJCOL) <b>Italian Journal of Computational Linguistics, OpenEditions Journals</b> Electronic ISSN 2499-4553 - Editorial Board <a href="https://journals.openedition.org/ijcol/490" style="color:cyan; display:inline">https://journals.openedition.org/ijcol/490</a></li>
             <li style="list-style: square;"> (IA) <b>Intelligenza Artificiale, IO-Press</b> Electronic ISSN 2211-0097 - Guest Editor Special Issue NL4AI 2022  <a href="https://content.iospress.com/articles/intelligenza-artificiale/ia172157" style="color:cyan; display:inline">https://content.iospress.com/articles/intelligenza-artificiale/ia172157</a></li>
           </ul><br>
@@ -455,7 +455,7 @@
           <ul>
             <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Scientific Supervisor of one Research Assistant</b> at the Department of Computer Science, University of Bari Aldo Moro, starting in August 2023 ending in 2024</li>
             <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Co-Supervisor of one Ph.D. Student</b> at the Department of Computer Science, University of Bari Aldo Moro, XXXIX Cycle, starting 2023-2024 </li>
-            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Supervisor</b> of more than 30 bachelor's theses and 10 master's theses</li>
+            <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Supervisor</b> of more than 35 bachelor's theses and 15 master's theses</li>
           <ul>
         </section>
         <section class="skill">
