--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <br><br>
           <h3 class="h3 skills-title">INVITED TALKS</h3>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">CREA - Council for Research in Agriculture and Agricultural Economics of the Ministry of the Italian Republic</b> 20/10/2023. TITLE: “Sentiment Analysis with CREA: Deep learning for content analysis”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">CREA - Council for Research in Agriculture and Agricultural Economics of the Ministry of the Italian Republic</b> 20/10/2023. TITLE: “Deep Learning and Sentiment Analysis Approaches on Social Contents”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Workshop in Quantitative Finance</b> the 25th and 26th of May 2023, University of Bologna, Italy. TITLE: “Information Extraction for Economics”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2023</b>, Supported by ACM RecSys, ACM Europe Council, DDSA, and SIGCHI, June 12-16, 2023, Copenhagen, DK. TITLE: “Knowledge-based recommendation thrugh ClayRS”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">SCAI'21</b>, SCAI: Search-Oriented Conversational AI workshop. Invited speaker to present the research work pursued in the area of conversational and recommender systems. "MyrrorBot: A Digital Assistant Based on Holistic User Models for Personalized Access to Online Services TOIS 21" </li>
@@ -436,7 +436,7 @@
         </section>
         <section class="skill">
           <br><br>
-          <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>
+          <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>s
           <h4 class="h4">Editorial Board:</h4>
           <ul style="color:white; list-style: square;">
             <li style="list-style: square;"> (JSIS) <b>The Journal of Strategic Information Systems, Elsevier</b> Online ISSN: 1873-1198, Print ISSN: 0963-8687 - Editorial Board <a href="https://www.sciencedirect.com/journal/the-journal-of-strategic-information-systems/about/editorial-board" style="color:cyan; display:inline">https://www.sciencedirect.com//</a></li>
