--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1239<br> H-Index: 17<br> i10-index: 27</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1333<br> H-Index: 17<br> i10-index: 28</p><br>
 
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -422,6 +422,13 @@
 
           </ol>
 
+        </section>
+        <section class="skill">
+          <br><br>
+          <h3 class="h3 skills-title">Visiting</h3>
+          <ul style="color:white; list-style: square;">
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
+          </ul>
         </section>
         <section class="skill">
           <br><br>
