--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <br><br>
           <h3 class="h3 skills-title">Visiting</h3>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:white;>Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
           </ul>
         </section>
         <section class="skill">
