--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <p>
             I served as a <b>program committee member for several esteemed international conferences</b>, including IJCAI, ECAI, IUI, AIVR, RecSys, UMAP, and WWW. My involvement in these conferences demonstrates my commitment to advancing research and fostering collaboration among estimated colleagues.
             I also played key roles in organizing significant scientific events. I served as an <b>organizing committee member</b> for the Ai*iA 2017 conference and took on the role of co-organizer for the EVALITA 2018 challenge – ABSITA, which focused on aspect-based sentiment analysis.
-            I have also contributed to organizing a successful edition of <b>EVALITA 2023, NL4AI 2022/23 and the UMAP 2020/23 ExUm Workshops</b>, emphasizing user modeling, content personalization, and semantic representation. Recently, I also supported the community as a <b style="color:cyan;">co-chair for ACL 2022 and EACL 2024</b> international conferences.
+            I have also contributed to organizing a successful edition of <b>EVALITA 2023, NL4AI 2022/23 and the UMAP 2020/23 ExUm Workshops</b>, emphasizing user modeling, content personalization, and semantic representation. Recently, I also supported the community as a <b style="color:cyan;">co-chair for ACL 2022, EVALITA 2023, EACL 2024, EMNLP 2024</b> international conferences.
           </p>
           <p>
             My expertise has been sought after serving as an official reviewer for numerous international journals, further establishing my reputation as a knowledgeable authority in NLP and Recommender Systems. I am currently in the <b>Reviewer Editorial Board</b> of more than <b>35 Computer Science International Journals</b>,
@@ -427,7 +427,7 @@
           <br><br>
           <h3 class="h3 skills-title">VISITING EXPERIENCE</h3>
           <ul style="color:white; list-style: square;">
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:cyan;>Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:cyan;">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
           </ul>
         </section>
         <section class="skill">
@@ -505,6 +505,7 @@
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ACL 2022</span> 60th Annual Meeting of the Association for Computational Linguistics</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">EVALITA 2023</span> Evaluation of NLP and Speech Tools for Italian 2023</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">EACL 2024</span> The 18th Conference of the European Chapter of the Association for Computational Linguistics</li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">EMNLP 2024</span> Conference on Empirical Methods in Natural Language Processing</li>
           </ul><br>
           <h4 class="h4">Workshop Co-Chair:</h4>
           <ul>
