--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
           <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1381<br> H-Index: 17<br> i10-index: 30</p><br>
-          <br><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Abilitazione Seconda Facia: 09/H1 - 01/B1 </p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Abilitazione 2° Fascia: 09/H1 - 01/B1 </p><br>
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
         <div class="info-content">
