--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <p>
             I served as a <b>program committee member for several esteemed international conferences</b>, including IJCAI, ECAI, IUI, AIVR, RecSys, UMAP, and WWW. My involvement in these conferences demonstrates my commitment to advancing research and fostering collaboration among estimated colleagues.
             I also played key roles in organizing significant scientific events. I served as an <b>organizing committee member</b> for the Ai*iA 2017 conference and took on the role of co-organizer for the EVALITA 2018 challenge – ABSITA, which focused on aspect-based sentiment analysis.
-            I have also contributed to organizing a successful edition of <b>EVALITA 2023, NL4AI 2022/23 and the UMAP 2020/23 ExUm Workshops</b>, emphasizing user modeling, content personalization, and semantic representation. Recently, I also supported the community as a <b style="color:cyan;">co-chair for ACL 2022, EVALITA 2023, EACL 2024, EMNLP 2024</b> international conferences.
+            I have also contributed to organizing a successful edition of <b>EVALITA 2023, NL4AI 2022/23, ACM RecSys IntRS 2022/2024 and the ACM UMAP 2020/24 ExUm Workshops</b>, emphasizing user modeling, content personalization, and semantic representation. Recently, I also supported the community as a <b style="color:cyan;">co-chair for ACL 2022, EVALITA 2023, EACL 2024, EMNLP 2024</b> international conferences.
           </p>
           <p>
             My expertise has been sought after serving as an official reviewer for numerous international journals, further establishing my reputation as a knowledgeable authority in NLP and Recommender Systems. I am currently in the <b>Reviewer Editorial Board</b> of more than <b>35 Computer Science International Journals</b>,
