--- a/index.html
+++ b/index.html
@@ -423,14 +423,14 @@
           </ol>
 
         </section>
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">VISITING EXPERIENCE</h3>
           <ul style="color:white; list-style: square;">
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">OVGU - Otto-von-Guericke-Universität Magdeburg - <a href="https://hcai.ovgu.de/" style="color:cyan;">Human-Centred Artificial Intelligence Research Group</a></b> 25/02/2024 - 25/05/2024 - 40 hours Block Lectures - "Human-Centred Natural Language Processing" </li>
           </ul>
         </section>
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">INVITED TALKS</h3>
           <ul style="color:white; list-style: square;">
@@ -441,7 +441,7 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">UMAP 2022/2023</b>, ACM Conference on User Modeling, Adaptation and Personalization. Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
           </ul>
         </section>
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">EDITORIAL ACTIVITY</h3>s
           <h4 class="h4">Editorial Board:</h4>
@@ -456,7 +456,7 @@
           </ul>
         </section>
 
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">SUPERVISION</h3>
           <ul>
@@ -465,7 +465,7 @@
             <li style="color:white;list-style: square;"> <b style="color:hsl(45, 54%, 58%)">Supervisor</b> of more than 35 bachelor's theses and 15 master's theses</li>
           <ul>
         </section>
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">TEACHING</h3>
           <ul>
@@ -474,7 +474,7 @@
           <ul>
         </section>
 
-        <section class="projects">
+        <section class="projects" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">PROJECTS</h3>
 
@@ -497,7 +497,7 @@
           <br><br>
         </section>
 
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
 
           <h3 class="h3 skills-title">COMMUNITY SERVICE</h3>
           <h4 class="h4">Co-chair:</h4>
@@ -532,14 +532,14 @@
             </ul>
         </section>
 
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">FELLOWSHIP</h3>
           <span style="color:white;"><b style="color:hsl(45, 54%, 58%)">Marie Skłodowska-Curie RISE action Horizon 2020: SEO-DWARF (Semantic EO Data Web Alert and Retrieval Framework) project n° 691071</b>. The research period at the foreign institution was held in Athens, Greece at the Planetek Hellas Research Center, Athens, Greece supervised by the coordinator of research activities Stelios Bollanos. The period was held from 01/03/2016 to 31/07/2016. A second secondment, in the same location, was held from 25/10/2018 to 09/11/2018 and from 02/04/2019 to 15/04/2019. For a total of 6 months of which 5 were continuous.
           </span>
         </section>
 
-        <section class="skill">
+        <section class="skill" style="font-size:14px; font-weight: 300;">
           <br><br>
           <h3 class="h3 skills-title">Technological transfer</h3>
           <span style="color:white;"><b style="color:hsl(45, 54%, 58%)">Founding Partner of Asteria S.r.l.</b> The company launched in 2020 through the regional public funding Pugliesi Innovativi (PIN - Initiative financed with resources from the Fund for Development and Cohesion and the 2014/2020 Puglia OP) is concerned with establishing strong collaborations with regional and national industry areas in order to transfer university KNOW-HOW into the industrial world. The topics covered by the company cover those high-tech solutions based on Artificial Intelligence applied to Conversational Agents, Recommender Systems, and Natural Language Processing.
@@ -548,7 +548,7 @@
 
 
 
-      <section class="skill">
+      <section class="skill" style="font-size:14px; font-weight: 300;">
         <br><br>
         <h3 class="h3 skills-title">Memberships</h3>
         <ul style="color:antiquewhite; list-style: square;">
