--- a/index.html
+++ b/index.html
@@ -516,9 +516,10 @@
           <h4 class="h4">Workshop Co-Chair:</h4>
           <ul>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ABSITA 2018 - ATE_ABSITA 2020</span> Aspect Term Extraction and Aspect-based Sentiment Analysis Task co-located event of the 7th Italian Conference on Computational Linguistics - CLiC-it 2020 </li>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ExUm</span> International Workshop on Transparent Personalization Methods based on Heterogeneous Personal Data at the ACM International Conference On User Modelling, Adaptation And Personalization: ‘19-’20-‘21-‘22-‘23</li>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">IntRS</span> Workshop on Interfaces and Human Decision Making for Recommender Systems at the ACM International Conference on Recommender Systems: '22-'23</li>
-            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">NL4AI</span> Workshop on Natural Language for Artificial Intelligence (NL4AI, 6th edition) Co-located at the International Conference of the Italian Association for Artificial intelligence: '22-'23</li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">ExUm</span> International Workshop on Transparent Personalization Methods based on Heterogeneous Personal Data at the ACM International Conference On User Modelling, Adaptation And Personalization: ‘19-’20-‘21-‘22-‘23-‘24</li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">IntRS</span> Workshop on Interfaces and Human Decision Making for Recommender Systems at the ACM International Conference on Recommender Systems: '22-'23-'24</li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">NL4AI</span> Workshop on Natural Language for Artificial Intelligence (NL4AI, 6th-7th edition) Co-located at the International Conference of the Italian Association for Artificial intelligence: '22-'23</li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">XAI.IT</span> Workshop on Explainable Artificial Intelligence (XAI.IT, 5th edition) Co-located with the International Conference of the Italian Association for Artificial intelligence: '24</li>
 
           </ul><br>
 
