--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Jan 2014 - Dec 2014</span>	<b>MAIVISTO</b> Massive Adaptive Internet VIdeo STreaming using the clOud - Bando Startup MIUR 2014/2015 (D.D 436 del 13 Marzo 2013).</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Jan 2014 – Dec 2014</span>	<b>ParsEco</b>: Recommender systems and backoffice for Web Portal realized to increase the recycle of used domestic oils, "Apulian ICT Living Labs" P.O. FESR PUGLIA 2007-2013 - Asse I - Linea di Intervento 1.4 - Azione 1.4.2. - A.D. n. 307 del 31.07.2012.</li>
             <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Jan 2013 – Dec 2013</span>	<b>HealthNet</b>: Recommender system and backoffice for HealthNet (The Health Social network), "Apulian ICT Living Labs" P.O. FESR PUGLIA 2007-2013 - Asse I - Linea di Intervento 1.4 - Azione 1.4.2. - A.D. n. 307 del 31.07.2012. </li>
+            <li style="color:white;"> <span style="color:hsl(45, 54%, 58%)">Dec 2023 – Now</span>	<b>FAIR</b>: Future Artificial Intelligence Research (FAIR) Foundation – FC 93098910503 - Spoke 6 - Symbiotic AI, Lead of the Task 2.4, "Preference Modeling" of the TP2 - Vision, Language and Multimodal Challenges </li>
+
           </ul><br>
 
           <h4 class="h4">Project reviewer</h4>
@@ -526,10 +528,10 @@
           <h4 class="h4">TPC member of some of the most relevant scientific conferences</h4>
             <ul style="color:antiquewhite; list-style: square;">
               <li style="list-style: square;">IUI 2017-2018-2024, International Intelligent User Interface conference - GRIN-GII A </li>
-              <li style="list-style: square;">UMAP 2018/2022/2023, User Modeling, Adaptation and Personalization conference - GRIN-GII B</li>
+              <li style="list-style: square;">UMAP 2018/2022/2023/2024, User Modeling, Adaptation and Personalization conference - GRIN-GII B</li>
               <li style="list-style: square;">IJCAI 2020, International Joint Conference on Artificial Intelligence - GRIN-GII A++ </li>
               <li style="list-style: square;">ECAI 2020, European Conference on Artificial Intelligence - GRIN-GII A- </li>
-              <li style="list-style: square;">RecSys 2020-2022-2023, Conference on Recommender Systems - GRIN-GII A </li>
+              <li style="list-style: square;">RecSys 2020-2022-2023-2024, Conference on Recommender Systems - GRIN-GII A </li>
               <li style="list-style: square;">TheWebConf 2022/2023 (WWW), International World Wide Web Conference - GRIN-GII A++ </li>
               <li style="list-style: square;">Conference on Artificial Intelligence AAAI 2023, GRIN-GII A++</li>
               <li style="list-style: square;">ACL 2023, Annual Meeting of the Association for Computational Linguistics - GRIN-GII A ++</li>
