--- a/index.html
+++ b/index.html
@@ -445,6 +445,9 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2023</b>, Supported by ACM RecSys, ACM Europe Council, DDSA, and SIGCHI, June 12-16, 2023, Copenhagen, DK. TITLE: “Knowledge-based recommendation thrugh ClayRS”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">SCAI'21</b>, SCAI: Search-Oriented Conversational AI workshop. Invited speaker to present the research work pursued in the area of conversational and recommender systems. "MyrrorBot: A Digital Assistant Based on Holistic User Models for Personalized Access to Online Services TOIS 21" </li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">UMAP 2022/2023</b>, ACM Conference on User Modeling, Adaptation and Personalization. Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2024</b>, Supported by ACM RecSys, SIGCHI, ACM Europe, EURAI, and University of Cagliari, October 8-12 2024, Bari, Italy. TITLE: “Large Language Models in Recommender Systems”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “LLaMAntino: Italian Large Language Models Family”</li>
+
           </ul>
         </section>
         <section class="skill" style="font-size:14px; font-weight: 300;">
