--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="info-content">
           <h1 class="name" title="Ph.D. Marco Polignano" style="font-size:20px !important">Ph.D. Marco Polignano</h1>
           <p style="color:hsl(35, 100%, 68%);font-size:18px;">Assistant Professor in AI</p><br>
-          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1381<br> H-Index: 17<br> i10-index: 30</p><br>
+          <p style="color:hsl(35, 100%, 68%);font-size:12px;">Citations: 1434<br> H-Index: 18<br> i10-index: 30</p><br>
           <p style="color:hsl(35, 100%, 68%);font-size:12px;">Abilitazione 2° Fascia: 09/H1 - 01/B1 </p><br>
           <p class="title"><br> * Natural Language Processing <br> * Recommender Systems <br> * Machine Learning <br> * Data Mining<br><br></p>
         </div>
@@ -440,14 +440,13 @@
           <br><br>
           <h3 class="h3 skills-title">INVITED TALKS</h3>
           <ul style="color:white; list-style: square;">
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">SCAI'21</b>, SCAI: Search-Oriented Conversational AI workshop. Invited speaker to present the research work pursued in the area of conversational and recommender systems. "MyrrorBot: A Digital Assistant Based on Holistic User Models for Personalized Access to Online Services TOIS 21" </li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">CREA - Council for Research in Agriculture and Agricultural Economics of the Ministry of the Italian Republic</b> 20/10/2023. TITLE: “Deep Learning and Sentiment Analysis Approaches on Social Contents”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Workshop in Quantitative Finance</b> the 25th and 26th of May 2023, University of Bologna, Italy. TITLE: “Information Extraction for Economics”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2023</b>, Supported by ACM RecSys, ACM Europe Council, DDSA, and SIGCHI, June 12-16, 2023, Copenhagen, DK. TITLE: “Knowledge-based recommendation thrugh ClayRS”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">SCAI'21</b>, SCAI: Search-Oriented Conversational AI workshop. Invited speaker to present the research work pursued in the area of conversational and recommender systems. "MyrrorBot: A Digital Assistant Based on Holistic User Models for Personalized Access to Online Services TOIS 21" </li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">UMAP 2022/2023</b>, ACM Conference on User Modeling, Adaptation and Personalization. Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2024</b>, Supported by ACM RecSys, SIGCHI, ACM Europe, EURAI, and University of Cagliari, October 8-12 2024, Bari, Italy. TITLE: “Large Language Models in Recommender Systems”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “LLaMAntino: Italian Large Language Models Family”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “Large Language Models: The Italian Perspective”</li>
 
           </ul>
         </section>
@@ -481,6 +480,8 @@
           <ul>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Natural Language Processing".</span>  3 ECTS credits, doctorate in Computer Science and Mathematics, University of Bari, a.y. 2021/2022</li>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Content Representation in Recommender Systems".</span> 3 ECTS credits, Doctorate in Computer Science and Mathematics, University of Bari, a.y. 2022/2023</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">UMAP 2022/2023</b>, ACM Conference on User Modeling, Adaptation and Personalization. Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
+
           <ul>
         </section>
 
