--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
           <ul>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Natural Language Processing".</span>  3 ECTS credits, doctorate in Computer Science and Mathematics, University of Bari, a.y. 2021/2022</li>
             <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"Deep Learning for Content Representation in Recommender Systems".</span> 3 ECTS credits, Doctorate in Computer Science and Mathematics, University of Bari, a.y. 2022/2023</li>
-            <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"UMAP 2022/2023</span>, ACM Conference on User Modeling, Adaptation and Personalization. Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
+            <li style="color:white;list-style: square;"> <span style="color:hsl(45, 54%, 58%)">"UMAP 2022/2023, ACM Conference on User Modeling, Adaptation and Personalization.</span> Tutorial about: “Semantics-aware Content Representations for Reproducible Recommender Systems (SCoRe)”</li>
           <ul>
         </section>
 
