--- a/index.html
+++ b/index.html
@@ -618,6 +618,7 @@
         <span style="color:hsl(45, 54%, 58%)">I have authored more than 60 scientific articles in major research venues including top-level conferences and highly cited and reputable journals.</span><br><br>
         <span style="color:white;">The updated list of articles is available here:</span> <a href="https://dblp.org/pid/162/9037.html" style="color:cyan;">https://dblp.org/pid/162/9037.html</a> <span style="color:white;"><br> <i>or here:</i></span> <a href="https://scholar.google.it/citations?user=sjQSYGQAAAAJ&hl=it&oi=ao" style="color:cyan;">https://scholar.google.it/citations?user=sjQSYGQAAAAJ&hl=it&oi=ao</a>
 
+        <a target="_blank" title="Visit Informatics Europe" href="http://www.informatics-europe.org"><img src="http://www.informatics-europe.org/images/logos/logo-informatics-europe-member-80.png" alt="Ιnformatics Εurope member" height="80"/></a>
       </article>
 
 
