--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">RecSys Summer School 2024</b>, Supported by ACM RecSys, SIGCHI, ACM Europe, EURAI, and University of Cagliari, October 8-12 2024, Bari, Italy. TITLE: “Large Language Models in Recommender Systems”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “Large Language Models: The Italian Perspective”</li>
-            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank">HCAI Symposium 2024</b>, 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:cyan;">>HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
 
           </ul>
         </section>
