--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">AILC Lectures on Computational Linguistics 2024</b>,  19-21 June 2024, Università degli Studi di Bari Aldo Moro, Bari, Italy. TITLE: “Hands-on Large Language Models”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Computer Science Workshop 2024</b>, 9-10 September 2024, DIBRIS department, University of Genoa. TITLE: “Large Language Models: The Italian Perspective”</li>
             <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)"><a href="https://hcai-ovgu.github.io/symposium2024/speakers.html" target="_blank" style="color:hsl(45, 54%, 58%)">HCAI Symposium 2024</b></a> 4-5 November 2024, Otto von Guericke University,Magdeburg, Germany. TITLE: “Large Language Models meets Human-Computer Interaction: The Large Agentic Models perspective”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">DMIF - Dipartimento di Scienze Matematiche, Informatiche e Fisiche</b></a> 29 November 2024, Università di Udine, Italia. TITLE: “Large Language Models in Recommender Systems”</li>
+            <li style="list-style: square;"><b style="color:hsl(45, 54%, 58%)">Unict - Dipartimento di Matematica e Informatica</b></a> 12 December 2024, Università di Catania, Italia. TITLE: “The long journey to Large Language Models: The NLP breakthrough”</li>
 
           </ul>
         </section>
